Restructuring filemanager